objects/UIMS_Company__c.object
<CustomObject>
    <fields>
        <fullName>AddInfoAddressECS__c</fullName>
        <description>Local Address addtional information</description>
        <label>AddInfoAddressECS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddInfoAddress__c</fullName>
        <description>Address addtional information</description>
        <label>AddInfoAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnualSales__c</fullName>
        <description>Annual Sales</description>
        <label>AnnualSales</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessType__c</fullName>
        <label>BusinessType</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CityECS__c</fullName>
        <description>City Local Name</description>
        <label>CityECS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <description>Country</description>
        <label>CountryCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountyECS__c</fullName>
        <description>County Local Name</description>
        <label>CountyECS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County</description>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyCode__c</fullName>
        <description>Account Currency</description>
        <label>CurrencyCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerClass__c</fullName>
        <description>Customer Classification</description>
        <label>CustomerClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeSize__c</fullName>
        <description>Range of Employee size</description>
        <label>EmployeeSize</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacsimileTelephoneNumber__c</fullName>
        <description>Fax Number</description>
        <label>FacsimileTelephoneNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederatedID__c</fullName>
        <description>Legacy ID of the company (IMS ID)</description>
        <externalId>true</externalId>
        <label>FederatedID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoldenId__c</fullName>
        <description>ID of the Golden Record</description>
        <label>GoldenId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeadQuarter__c</fullName>
        <description>Headquarter flag</description>
        <label>HeadQuarter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageCode__c</fullName>
        <description>Language</description>
        <label>LanguageCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModificationDate__c</fullName>
        <description>Technical field for last functional update</description>
        <label>LastModificationDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalityName__c</fullName>
        <description>City</description>
        <label>LocalityName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketSegment__c</fullName>
        <description>Market Segment</description>
        <label>MarketSegment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketServed__c</fullName>
        <description>Market Served</description>
        <label>MarketServed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameECS__c</fullName>
        <description>Account Local Name</description>
        <label>NameECS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <description>Comments</description>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberEmployees__c</fullName>
        <description>Number of employes</description>
        <label>NumberEmployees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <description>Company Name</description>
        <label>OrganizationName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostOfficeBoxCode__c</fullName>
        <description>PO Box Zip Code</description>
        <label>PostOfficeBoxCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostOfficeBox__c</fullName>
        <description>PO Box</description>
        <label>PostOfficeBox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalAddress__c</fullName>
        <description>Postal Street</description>
        <label>PostalAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCity__c</fullName>
        <description>Postal City</description>
        <label>PostalCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <description>Postal Code</description>
        <label>PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCounty__c</fullName>
        <description>POSTAL COUNTY</description>
        <label>PostalCounty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalStateProvince__c</fullName>
        <description>Postal state provicnce</description>
        <label>PostalStateProvince</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortNameECS__c</fullName>
        <description>Account Local short Name</description>
        <label>ShortNameECS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <description>Trace of Source System</description>
        <label>SourceSystemId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>St__c</fullName>
        <description>State/Province</description>
        <label>St</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreetECS__c</fullName>
        <description>Street local name</description>
        <label>StreetECS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Street</description>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxIdentificationNumber__c</fullName>
        <label>TaxIdentificationNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxOffice__c</fullName>
        <description>TaxOffice</description>
        <label>TaxOffice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TelephoneNumber__c</fullName>
        <description>Phone Number</description>
        <label>TelephoneNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <description>Time Zone</description>
        <label>TimeZone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UIMSVnew__c</fullName>
        <label>UIMSVnew</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vnew__c</fullName>
        <label>Vnew</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vold__c</fullName>
        <label>Vold</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebSite__c</fullName>
        <description>Web Site</description>
        <label>WebSite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>UIMS Companies</relationshipLabel>
        <relationshipName>UIMS_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fireUpdateTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>fireUpdateTrigger</label>
        <type>Checkbox</type>
    </fields>
    <label>UIMS Company</label>
    <nameField>
        <label>UIMS Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UIMS Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>